# terminal

./: .gitignore  .mise.toml  .oxlintrc.json  CLAUDE.md  Justfile  LICENSE  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  vitest.config.ts
.claude/: settings.json
.claude/rules/: config-protection.md  error-handling.md  eslint-disable.md  ipc-test-contract.md  layer-boundary.md  react-imperative-api.md  refactoring-checklist.md  resource-lifecycle.md  string-contract.md  theme-colors.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/: design-principles.md  initial-research.md  layer-boundary.md  tech-stack.md  work-plan.md
docs/adr/: 0001-windows-terminal-tech-stack.md  0002-frontend-formatter-linter-oxlint-biome.md  0003-react-state-management-usestate-useref.md  0004-terminal-emulator-library-xterm-js.md  0005-pty-library-custom-conpty-wrapper.md
src/: App.css  App.ipc.test.tsx  App.test.tsx  App.tsx  bindings.ts  constants.ts  types.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/.config/: nextest.toml
src-tauri/capabilities/: default.json
src-tauri/crates/pty/: Cargo.toml
src-tauri/crates/pty/src/: lib.rs  unix.rs  windows.rs
src-tauri/src/: git.rs  lib.rs  main.rs
src/components/: PaneContainer.css  PaneContainer.tsx  PaneDivider.css  PaneDivider.tsx  PrefixModeIndicator.css  PrefixModeIndicator.tsx  Sidebar.css  Sidebar.test.tsx  Sidebar.tsx  TerminalView.css  TerminalView.test.tsx  TerminalView.tsx  TitleBar.css  TitleBar.test.tsx  TitleBar.tsx
(+27 files in other folders)
