[package]
name = "pty"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints.rust]
# PTY operations require libc/windows-sys FFI
unsafe_code = "allow"

[dependencies]
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
